# path-graph

./: .gitignore  READMED.md  reqiurement.txt
get_data/: api_get_data.ipynb  crc_h5.ipynb
get_data/concentriq/: .gitignore  README.md  pyproject.toml  requirements.txt
get_data/concentriq/src/concentriq/: __init__.py  basis.py  client.py
get_data/concentriq/src/concentriq/endpoints/: __init__.py  annotations.py  folders.py  image_sets.py  images.py  metadata.py  upload.py
get_data/data_sheets/: CRC_CLI_M21-404-HE_harmonized_feature_table.xlsx  FINAL_Reconciled_SampleID_clinical_NSCLC_GEA.xlsx  FINAL_Reconciled_sampleID_clinical_CRC.xlsx  image_id_res.csv
model/: GNN.py  MLP.py  construct_graph.ipynb  slide_level.ipynb  three_layer_train_model.ipynb  tumor_only_data.ipynb
patch_embeddings/: cluster_is_include.xlsx  draw_umap.ipynb  patch_gigapath.ipynb  tile_cluster_64.ipynb  tile_umap.ipynb
utils/: constant.py  slide_utils.py  train_utils.py  utils_fun.py
