[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "concentriq"
description = "AbbVie BAIRDS Concentriq API Kit"
version = "0.1.10"
dynamic = ["readme", "dependencies"]
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
]

[tool.setuptools.dynamic]
readme = { file = ["README.md"] }
dependencies = { file = ["requirements.txt"] }
